--- a/FreeIOT/zh-Hans.lproj/Strings.strings
+++ b/FreeIOT/zh-Hans.lproj/Strings.strings
@@ -29,8 +29,8 @@
 /* ----------------------------  alert title & msg ---------------------------- */
 
 "UNBIND_ALERT_MSG"                  = "解除绑定之后，您和您授权的用户都将失去操作权限";
-"CHANGEWIFI_ALERT_TITLE"            = "请切换WiFi网络";
-"CHANGEWIFI_ALERT_MSG"              = "请点击手机\"设置\"->\"Wi-Fi\"，在WiFi列表中，连接到%@";
+"CHANGEWIFI_ALERT_TITLE"            = "请接入WiFi网络";
+"CHANGEWIFI_ALERT_MSG"              = "当前手机未接入WiFi网络，请接入能够连接互联网的WiFi网络";
 "PASSEMPTY_ALERT_MSG"               = "您没有输入密码，确认WiFi网络无密码？";
 "GIVEUP_ALERT_MSG"                  = "放弃本次配置";
 "CONFIGFAIL_ALERT_MSG"              = "无法完成配置，请确认:\n1.WiFi名称与密码是否输入正确;\n2.是否连接了插座发出的网络。";
